Api key list and last used (#204)
* API token schema and APIs

* API key list and last used
